--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,10 @@ node_modules
 dist
 
 .vscode
+.idea
 
-replay.json
-replay.html
+replay*.json
+replay*.html
 /kits/java/target
 /kits/java/.idea/
 /kits/java/luxai2022.iml
